# DeltaNights

./: .gitignore  README.md
Assets/Animation/AnimatorController/: Myrtle.controller
Assets/Animation/CharacterAnim/UniversalAnimation/: Idle.anim
Assets/Meshes/桃金娘/materials/: body.mat  body1.mat  clos1.mat  clos2.mat  eye.mat  face.mat  glass.mat  glass2.mat  hair1.mat  hair2.mat  light.mat
Assets/Prefabs/: ChatWindow.prefab  StartPanel.prefab
Assets/Prefabs/UI/: EnqueueWindow.prefab  PopupWindow.prefab  Template2Window.prefab  TemplatePlayerInfoUI.prefab  TemplateWindow.prefab
Assets/Prefabs/UIFramework/: UIFramework.prefab
Assets/Protobuf/: GameEventMessage.proto
Assets/Scenes/: SampleScene.unity
Assets/ScriptableObjects/UISettings/: MainSceneUI.asset  SampleSceneUI.asset
Assets/Scripts/EventProcess/: Signals.cs
Assets/Scripts/FiniteStateMachine/: FiniteStateMachine.cs  IState.cs
Assets/Scripts/GameNetwork/: NetWorkManager.cs
Assets/Scripts/GenerationSystem/: AreaGenerationControl.cs  Container.cs  GenerationManager.cs  LooseItem.cs
Assets/Scripts/InputProcess/: GameInput.cs  InputSystem_Actions.cs  InputSystem_Actions.inputactions
Assets/Scripts/Network/: SocketTest.cs
Assets/Scripts/PlayerControl/: PlayerAimController.cs  PlayerController.cs
Assets/Scripts/PlayerControl/PlayerFSM/: PlayerFiniteStateMachine.cs  PlayerState.cs
Assets/Scripts/SceneUI/StartSceneUI/: ChatWindow.cs  StartPanel.cs  StartSceneUIManager.cs
Assets/Scripts/UIFramework/: README.md  UIFramework.cs  UIFrameworkSettings.cs
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
DeltaNights-Server/: CMakeLists.txt  dnserver.cpp  dnserver.h  logger.cpp  logger.h  main.cpp  msgsender.cpp  msgsender.h
Docs/项目文档/: DeltaNights项目文档.odt
ProjectSettings/: ProjectSettings.asset
(+21 files in other folders)
